--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,10 @@ before_install:
     - curl https://sdk.cloud.google.com | bash > /dev/null;
     - source $HOME/google-cloud-sdk/path.bash.inc
     - gcloud components update kubectl
-    - gcloud auth activate-service-account --key-file service-account.json
+    - gcloud auth activate-service-account --key-file=service-account.json
     - gcloud config set project multi-k8s-295922
     - gcloud config set compute/zone southamerica-east1-a
-    - gcloud container clusters get-credential multi-cluster
+    - gcloud container clusters get-credentials multi-cluster
     - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
     - docker build -t lucca1236/react-test -f .client/Dockerfile.dev ./client
 
